@@ -1,6 +1,7 @@
 package arlyon.veining.proxy;
 
 import arlyon.veining.Constants;
+import arlyon.veining.Enchantment;
 import net.minecraft.creativetab.CreativeTabs;
 import net.minecraft.enchantment.EnumEnchantmentType;
 import net.minecraftforge.fml.common.event.FMLInitializationEvent;
@@ -13,23 +14,21 @@ public class ProxyClient extends ProxyCommon {
 
     @Override
     public void preInit(FMLPreInitializationEvent e) {
+
         super.preInit(e);
+
+        // add it to the creative tab
+        EnumEnchantmentType[] enchantmentTypes = CreativeTabs.TOOLS.getRelevantEnchantmentTypes();
+        enchantmentTypes = Arrays.copyOf(enchantmentTypes, enchantmentTypes.length+1);
+        enchantmentTypes[enchantmentTypes.length-1] = Enchantment.PICKAXE;
+        CreativeTabs.TOOLS.setRelevantEnchantmentTypes(enchantmentTypes);
+
     }
 
     @Override
     public void init(FMLInitializationEvent e) { super.init(e); }
 
     @Override
-    public void postInit(FMLPostInitializationEvent e) {
-
-        super.postInit(e);
-
-        // add it to the creative tab
-        EnumEnchantmentType[] enchantmentTypes = CreativeTabs.TOOLS.getRelevantEnchantmentTypes();
-        enchantmentTypes = Arrays.copyOf(enchantmentTypes, enchantmentTypes.length+1);
-        enchantmentTypes[enchantmentTypes.length-1] = Constants.PICKAXE;
-        CreativeTabs.TOOLS.setRelevantEnchantmentTypes(enchantmentTypes);
-
-    }
+    public void postInit(FMLPostInitializationEvent e) { super.postInit(e); }
 
 }
